--- a/configbackup-master/.tmux.conf
+++ b/configbackup-master/.tmux.conf
@@ -9,9 +9,7 @@ bind-key -r l select-pane -R
 bind-key C-o select-layout main-horizontal 
 bind-key C-v select-layout main-vertical 
 bind-key -r s select-layout -n  
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set-option -g mouse on
 set-option -g allow-rename off
 set -g default-terminal "screen-it"
 bind-key -r C-u  resize-pane -U 5
